--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,14 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./src/app/",
+    "paths": {
+      "@shared-imports": ["_shared/index"],
+      "@components": ["components"],
+      "@model": ["_shared/model"],
+      "@services": ["_shared/services"],
+      "@pipes": ["_shared/pipes"]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
