--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ngrx/router-store": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
+    "@types/leaflet": "^1.9.8",
     "flowbite": "^2.2.1",
+    "leaflet": "^1.9.4",
     "ngx-mask": "^17.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
