--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.9.4",
     "ngx-mask": "^17.0.4",
     "rxjs": "~7.8.0",
+    "tailwindcss-animated": "^1.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
