--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/router-store": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
+    "apexcharts": "^3.48.0",
     "flowbite": "^2.2.1",
     "leaflet": "^1.9.4",
     "ngx-mask": "^17.0.4",
