--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-/src/app/environment.ts
 
 # Compiled output
 /dist
@@ -41,4 +40,5 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+src/app/environment.ts
 src/app/environment.ts
