--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o --configuration development",
+    "local": "ng serve -o --configuration development",
+    "network": "ng serve -o --host 0.0.0.0 --configuration development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -25,7 +26,6 @@
     "@ngrx/router-store": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
-    "apexcharts": "^3.48.0",
     "flowbite": "^2.2.1",
     "leaflet": "^1.9.4",
     "ngx-mask": "^17.0.4",
