--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "local": "ng serve -o --configuration development",
-    "network": "ng serve -o --host 0.0.0.0 --configuration development",
+    "local": "ng serve --configuration development",
+    "network": "ng serve --host 0.0.0.0 --configuration development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
