--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@ngrx/router-store": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
+    "@tailwindcss/postcss": "^4.0.14",
     "flowbite": "^2.2.1",
     "leaflet": "^1.9.4",
     "ngx-mask": "^17.0.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.14",
     "tailwindcss-animated": "^1.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -40,15 +42,14 @@
     "@angular/compiler-cli": "^18.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.8",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
+    "postcss": "^8.5.3",
     "typescript": "~5.4.5"
   }
 }
