--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/router": "^18.0.1",
     "@ng-icons/core": "^26.3.0",
     "@ng-icons/heroicons": "^26.3.0",
-    "@ngrx/effects": "^17.0.1",
-    "@ngrx/entity": "^17.0.1",
-    "@ngrx/router-store": "^17.0.1",
-    "@ngrx/store": "^17.0.1",
-    "@ngrx/store-devtools": "^17.0.1",
+    "@ngrx/effects": "^18.0.1",
+    "@ngrx/entity": "^18.0.1",
+    "@ngrx/operators": "^18.0.1",
+    "@ngrx/router-store": "^18.0.1",
+    "@ngrx/store": "^18.0.1",
+    "@ngrx/store-devtools": "^18.0.1",
     "@tailwindcss/postcss": "^4.0.14",
     "flowbite": "^2.2.1",
     "leaflet": "^1.9.4",
