--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "local": "ng serve --configuration development",
-    "network": "ng serve --host 0.0.0.0 --configuration development",
+    "docker": "ng serve --host 0.0.0.0 --watch --configuration development",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -25,7 +25,7 @@
     "@ngrx/entity": "^19.0.1",
     "@ngrx/operators": "^19.0.1",
     "@ngrx/router-store": "^19.0.1",
-    "@ngrx/store": "^18.0.1",
+    "@ngrx/store": "^19.0.1",
     "@ngrx/store-devtools": "^19.0.1",
     "@tailwindcss/postcss": "^4.0.14",
     "flowbite": "^2.2.1",
